--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal do Cliente - LG Plataforma</title>
+    <title>Portal do Cliente - Legacy</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
     <style>
@@ -555,7 +555,8 @@
     <div id="loginPage" class="login-container">
         <div class="glass-card login-card">
             <div class="login-header">
-                <h1 class="neon-text">LG Plataforma</h1>
+                <i class="fas fa-fingerprint icon-blue"></i> fas fa-fingerprint<br>
+                <h1 class="neon-text">Legacy Sistemas</h1>
                 <p>Portal do Cliente</p>
             </div>
             
