--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
     <div id="loginPage" class="login-container">
         <div class="glass-card login-card">
             <div class="login-header">
-                <i class="fas fa-fingerprint icon-blue"></i> 
+                <i class="fas fa-fingerprint fa-4x icon-blue"></i> 
                 <h1 class="neon-text">Legacy Sistemas</h1>
                 <p>Portal do Cliente</p>
             </div>
