--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portal do Cliente - Legacy</title>
+    <title>Legacy Connect+</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2/dist/umd/supabase.js"></script>
     <style>
@@ -586,9 +586,9 @@
         <!-- Header -->
         <div class="header">
             <div class="header-content">
-                <div class="logo">LG Plataforma</div>
+                <div class="logo">Legacy Connect+/div>
                 <div class="user-info">
-                    <span><i class="fas fa-user"></i> <span id="userName">Cliente</span></span>
+                    <span><i class="fas fa-handshake"></i> <span id="userName">Usuário</span></span>
                     <button class="btn btn-danger btn-sm" id="logoutBtn">
                         <i class="fas fa-sign-out-alt"></i> Sair
                     </button>
