--- a/index.html
+++ b/index.html
@@ -556,8 +556,8 @@
         <div class="glass-card login-card">
             <div class="login-header">
                 <i class="fas fa-user-lock fa-4x icon-blue"></i> 
-                <h1 class="neon-text">Legacy Sistemas</h1>
-                <p>Portal do Cliente</p>
+                <h1 class="neon-text">Legacy Connect+</h1>
+                <p>Central de Informações</p>
             </div>
             
             <form id="cpfForm">
