--- a/index.html
+++ b/index.html
@@ -555,7 +555,7 @@
     <div id="loginPage" class="login-container">
         <div class="glass-card login-card">
             <div class="login-header">
-                <i class="fas fa-user-lock fa-4x icon-blue"></i> 
+                <i class="fas fa-handshake fa-4x"></i> 
                 <h1 class="neon-text">Legacy Connect+</h1>
                 <p>Central de Informações</p>
             </div>
