--- a/index.html
+++ b/index.html
@@ -586,7 +586,7 @@
         <!-- Header -->
         <div class="header">
             <div class="header-content">
-                <div class="logo">Legacy Connect+/div>
+                <div class="logo">Legacy Connect+</div>
                 <div class="user-info">
                     <span><i class="fas fa-handshake"></i> <span id="userName">Usuário</span></span>
                     <button class="btn btn-danger btn-sm" id="logoutBtn">
